--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "nuxt": "2.15.8",
     "scrollreveal": "^4.0.9",
-    "vue-scroll-reveal": "^2.1.0"
+    "vue-scroll-reveal": "^2.1.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
